# codebase_RAG

./: README.md  app.py  code_faiss.index  code_metadata.json  create_chunks.py  create_faiss.py  llm_calling.py  pyproject.toml  requirements.txt  retrive_docs.py
